@@ -6,17 +6,17 @@ RunInTerminal=true
 ShowLocals=true
 
 [filenumbers]
-0=69
-1=1
-2=908
-3=334
-4=89
-5=29
-6=2
-7=18
-8=16
-9=13
-10=21
+0=186
+1=1312
+2=1
+3=1
+4=204
+5=30
+6=36
+7=34
+8=30
+9=2
+10=22
 11=1
 
 [filemarkers]
@@ -42,10 +42,10 @@ filter.dir.ignore.hidden=0
 clean before build=false
 
 [filelist]
-0=/home/sf/Devel/galculator/src/general_functions.c
-1=/home/sf/Devel/galculator/src/galculator.h
-2=/home/sf/Devel/galculator/src/ui.c
-3=/home/sf/Devel/galculator/src/callbacks.c
+0=/home/sf/Devel/galculator/src/main.c
+1=/home/sf/Devel/galculator/src/callbacks.c
+2=/home/sf/Devel/galculator/src/calc_basic.h
+3=/home/sf/Devel/galculator/src/galculator.h
 4=/home/sf/Devel/galculator/src/parser.c
 5=/home/sf/Devel/galculator/src/parser.h
 6=/home/sf/Devel/galculator/ChangeLog
@@ -71,11 +71,11 @@ clean before build=false
 7=display_result_get_double
 
 [find_text]
-0=current_status
-1=strtod
-2=parse:
-3=compute_expression
-4=current_token
-5=s_cb_token
-6=number.
-7=menu
+0=BALA
+1=really_mod
+2=parse
+3=current_status
+4=strtod
+5=parse:
+6=compute_expression
+7=current_token
